0.7.0/_sources/gallery/surface_multi_texture.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/surface_multi_texture.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_surface_multi_texture.py>`
        to download the full example as a Python script or as a
        Jupyter notebook..

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_surface_multi_texture.py:


Surface with multiple textures
==============================

This example demonstrates one possible method for displaying a 3D surface with
multiple textures.

Thanks to Emmanuel Reynaud and Luis Gutierrez for providing the gorgeous coral
model for this demo. You can find the data on FigShare:
https://zenodo.org/records/13380203

More information on the methods used to generate this model can be found in *L.
Gutierrez-Heredia, C. Keogh, E. G. Reynaud, Assessing the Capabilities of
Additive Manufacturing Technologies for Coral Studies, Education, and
Monitoring. Front. Mar. Sci. 5 (2018), doi:10.3389/fmars.2018.00278.*

A bit about 3D models
---------------------

A standard way to define a 3D model (mesh, or Surface in napari) is by listing
vertices (3D point coordinates) and faces (triplets of vertex indices - each
face is a triangle in 3D space). Meshes are often stored in "Wavefront" (.obj)
files, which may have companion material (.mtl) files that describe some
shading properties (base color, shinyness, etc.) for different parts of the
model.

In some cases, the color of a vertex is given by a single point value that is
then colormapped on the fly (`vertex_values`). In other cases, each vertex or
face may be assigned a specific color (`vertex_colors`). These methods are
demonstrated in :ref:`sphx_glr_gallery_surface_texture_and_colors.py`.

In the case of "photorealistic" models, the color of each vertex is instead
determined by mapping a vertex to a point in an image called a texture using 2D
texture coordinates in the range [0, 1]. The color of each individual pixel is
smoothly interpolated (sampled) on the fly from the texture (the GPU makes this
interpolation very fast).

Napari does not (yet) support models with multiple textures or materials. If
the textures don't overlap, you can display them on separate meshes as shown in
this demo. If the textures do overlap, you may instead be able to combine the
textures as images. This relies on textures having the same texture
coordinates, and may require resizing the textures to match each other.

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 46-54

.. code-block:: Python

    import os

    import matplotlib.pyplot as plt
    import pooch
    from vispy.io import imread, read_mesh

    import napari








.. GENERATED FROM PYTHON SOURCE LINES 55-57

Download the model
------------------

.. GENERATED FROM PYTHON SOURCE LINES 57-74

.. code-block:: Python

    download = pooch.DOIDownloader(progressbar=True)
    doi = '10.5281/zenodo.13380203'
    tmp_dir = pooch.os_cache('napari-surface-texture-example')
    os.makedirs(tmp_dir, exist_ok=True)
    data_files = {
        'mesh': 'PocilloporaDamicornisSkin.obj',
        # "materials": "PocilloporaVerrugosaSkinCrop.mtl",  # not yet supported
        'Texture_0': 'PocilloporaDamicornisSkin_Texture_0.jpg',
        'GeneratedMat2': 'PocilloporaDamicornisSkin_GeneratedMat2.png',
    }
    data_to_path = {}
    print(f'downloading data into {tmp_dir}')
    for id_, file_name in data_files.items():
        res = pooch.retrieve(f'doi:{doi}/{file_name}', known_hash=None,  progressbar=True)
        data_to_path[id_] = res






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    downloading data into /home/runner/work/docs/docs/.cache/napari-surface-texture-example
    Downloading...
    From: https://drive.google.com/uc?id=1yuPHWlLzowlfWzVMUg-mvAEe_Tmvpzy4
    To: /home/runner/work/docs/docs/.cache/pooch/tmpbtym49sj
      0%|          | 0.00/93.8M [00:00<?, ?B/s]      1%|          | 524k/93.8M [00:00<00:22, 4.19MB/s]      8%|▊         | 7.86M/93.8M [00:00<00:02, 40.8MB/s]     13%|█▎        | 12.6M/93.8M [00:00<00:02, 29.9MB/s]     17%|█▋        | 16.3M/93.8M [00:00<00:02, 28.6MB/s]     23%|██▎       | 21.5M/93.8M [00:00<00:02, 30.1MB/s]     27%|██▋       | 25.7M/93.8M [00:00<00:02, 28.0MB/s]     31%|███       | 28.8M/93.8M [00:01<00:02, 24.5MB/s]     34%|███▎      | 31.5M/93.8M [00:01<00:02, 23.8MB/s]     37%|███▋      | 34.6M/93.8M [00:01<00:02, 24.8MB/s]     43%|████▎     | 40.4M/93.8M [00:01<00:01, 31.6MB/s]     49%|████▊     | 45.6M/93.8M [00:01<00:01, 36.0MB/s]     53%|█████▎    | 49.8M/93.8M [00:01<00:01, 35.1MB/s]     58%|█████▊    | 54.0M/93.8M [00:01<00:01, 36.6MB/s]     64%|██████▎   | 59.8M/93.8M [00:01<00:00, 41.8MB/s]     72%|███████▏  | 67.6M/93.8M [00:02<00:00, 46.0MB/s]     77%|███████▋  | 72.4M/93.8M [00:02<00:00, 42.2MB/s]     84%|████████▍ | 79.2M/93.8M [00:02<00:00, 48.5MB/s]     92%|█████████▏| 86.5M/93.8M [00:02<00:00, 54.9MB/s]     98%|█████████▊| 92.3M/93.8M [00:02<00:00, 41.4MB/s]    100%|██████████| 93.8M/93.8M [00:02<00:00, 35.8MB/s]
    Downloading...
    From: https://drive.google.com/uc?id=17tG44rMPWjAIoO_AlH9BaQkPY7GxxEN9
    To: /home/runner/work/docs/docs/.cache/pooch/tmp80o3qjlc
      0%|          | 0.00/17.3M [00:00<?, ?B/s]      3%|▎         | 524k/17.3M [00:00<00:03, 4.65MB/s]     48%|████▊     | 8.39M/17.3M [00:00<00:00, 45.4MB/s]     76%|███████▌  | 13.1M/17.3M [00:00<00:00, 31.2MB/s]     97%|█████████▋| 16.8M/17.3M [00:00<00:00, 32.1MB/s]    100%|██████████| 17.3M/17.3M [00:00<00:00, 32.4MB/s]
    Downloading...
    From: https://drive.google.com/uc?id=1l_hGxDg6JARAyFMgWXuoIZs49qKXBv01
    To: /home/runner/work/docs/docs/.cache/pooch/tmp4hzj9onb
      0%|          | 0.00/120k [00:00<?, ?B/s]    100%|██████████| 120k/120k [00:00<00:00, 1.81MB/s]




.. GENERATED FROM PYTHON SOURCE LINES 75-81

Load the model
--------------
Next, read the model data from the .obj file. Currently napari/vispy do not
support reading material properties (.mtl files) nor separate texture and
vertex indices (i.e. repeated vertices). Normal vectors read from the file
are also ignored and re-calculated from the faces.

.. GENERATED FROM PYTHON SOURCE LINES 81-83

.. code-block:: Python

    vertices, faces, _normals, texcoords = read_mesh(data_to_path['mesh'])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Notice reading .OBJ: material properties are ignored.




.. GENERATED FROM PYTHON SOURCE LINES 84-89

Load the textures
-----------------
This model comes with two textures: `Texture_0` is generated from
photogrammetry of the actual object, and `GeneratedMat2` is a generated
material to fill in  parts of the model lacking photographic texture.

.. GENERATED FROM PYTHON SOURCE LINES 89-92

.. code-block:: Python

    photo_texture = imread(data_to_path['Texture_0'])
    generated_texture = imread(data_to_path['GeneratedMat2'])








.. GENERATED FROM PYTHON SOURCE LINES 93-94

This is what the texture images look like in 2D:

.. GENERATED FROM PYTHON SOURCE LINES 94-105

.. code-block:: Python

    fig, axs = plt.subplots(1, 2)
    axs[0].set_title(f'Texture_0 {photo_texture.shape}')
    axs[0].imshow(photo_texture)
    axs[0].set_xticks((0, photo_texture.shape[1]), labels=(0.0, 1.0))
    axs[0].set_yticks((0, photo_texture.shape[0]), labels=(0.0, 1.0))
    axs[1].set_title(f'GeneratedMat2 {generated_texture.shape}')
    axs[1].imshow(generated_texture)
    axs[1].set_xticks((0, generated_texture.shape[1]), labels=(0.0, 1.0))
    axs[1].set_yticks((0, generated_texture.shape[0]), labels=(0.0, 1.0))
    fig.show()




.. image-sg:: /gallery/images/sphx_glr_surface_multi_texture_001.png
   :alt: Texture_0 (8192, 8192, 3), GeneratedMat2 (2048, 2048, 4)
   :srcset: /gallery/images/sphx_glr_surface_multi_texture_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 106-111

Create the napari layers
------------------------
Next create two separate layers with the same mesh - once with each texture.
In this example the texture coordinates happen to be the same for each
texture, but this is not a strict requirement.

.. GENERATED FROM PYTHON SOURCE LINES 111-124

.. code-block:: Python

    photo_texture_layer = napari.layers.Surface(
        (vertices, faces),
        texture=photo_texture,
        texcoords=texcoords,
        name='Texture_0',
    )
    generated_texture_layer = napari.layers.Surface(
        (vertices, faces),
        texture=generated_texture,
        texcoords=texcoords,
        name='GeneratedMat2',
    )








.. GENERATED FROM PYTHON SOURCE LINES 125-129

Add the layers to a viewer
--------------------------
Finally, create the viewer and add the Surface layers.
sphinx_gallery_thumbnail_number = 2

.. GENERATED FROM PYTHON SOURCE LINES 129-139

.. code-block:: Python

    viewer = napari.Viewer(ndisplay=3)

    viewer.add_layer(photo_texture_layer)
    viewer.add_layer(generated_texture_layer)

    viewer.camera.angles = (70, -20, 5)
    viewer.fit_to_view()

    if __name__ == '__main__':
        napari.run()



.. image-sg:: /gallery/images/sphx_glr_surface_multi_texture_002.png
   :alt: surface multi texture
   :srcset: /gallery/images/sphx_glr_surface_multi_texture_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 25.607 seconds)


.. _sphx_glr_download_gallery_surface_multi_texture.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: surface_multi_texture.ipynb <surface_multi_texture.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: surface_multi_texture.py <surface_multi_texture.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: surface_multi_texture.zip <surface_multi_texture.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
